assets/styles/components/_featured.scss
/* ---------------------------------------- */
/* Home */
/* ---------------------------------------- */
.featured {
    text-align: center;
    padding-top: 40px;


    @media #{$small} {
        padding-top: $gutter;;
        padding-bottom: $gutter;
    }

    .is-sticky & {
        padding-top: 40px;
    }

    img {
        @extend .img-responsive;
    }

    > div {
        position: relative;

        &:last-child {
            padding-bottom: 0;
        }
    }
    h2 a,
    time {
        padding-bottom: 10px;
        display: block;
        color: $color-white;
    }
    .featured__item__info {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        padding: 0 15px;

        header {
            //display: none;
            padding: $gutter-md;
            background: rgba($color-black, 0.4);
            height: 100%;
            width: 100%;
            display: table;
        }
        
        h2 {
            margin: 0;
            padding: 0;
            font-size: 20px;
            color: $color-white;
        }
    }
    .col-sm-5 {
        @media #{$small} {
           padding-left: 1.3513513515%;
        }
    }
    .btn {
        display: inline-block;
        clear: both;
    }
}
.featured__item {
    margin-bottom: $gutter-md;

    @media #{$small} {
       padding-right: 1.3513513515%;
       margin-bottom: 0;
    }
}
.featured__item--video {
    margin-bottom: $gutter-md;

    @media #{$small} {
        padding-bottom: 1.3513513515%;
        margin-bottom: 0;
    }
}
.featured__item--portfolio {
    @media #{$small} {
       padding-top: 1.3513513515%;
    }
}
.featured--overlay {
    height: 100%;
    width: 100%;
    position: relative;
    top: 0;
    left: 0;

}
.featured--overlay__inner {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background: rgba($color-black, 0.4);
    padding: 15px;

    h2 {
        font-size: 20px;
        margin: 0;
        color: $color-white;
    }
}


.featured {
    a:hover header,
    a:hover .featured--overlay__inner {
        background: rgba($color-black, 0.6);
    }
}

